[package]
name = "das"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1"
actix-service = "2.0"
env_logger = "0.10.0"
include_dir = "0.7.3"
once_cell = "1.18.0"
paperclip = { version = "0.8", features = ["paperclip-actix", "actix4",  "swagger-ui", "url", "uuid"] }
# For now it's not possible to compile 1.16
rhai = { path = "libs/rhai", features= ["sync"] }
serde_json = "1.0.82"

[build-dependencies]
vergen = { version = "8.2", default-features = false, features = ["build", "cargo", "git", "gitcl"] }
ts-rs = "7.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"